--- a/postiz/docker-compose.yml
+++ b/postiz/docker-compose.yml
@@ -4,20 +4,17 @@ services:
     container_name: postiz
     restart: always
     environment:
-      # You must change these. Replace `postiz.your-server.com` with your DNS name - what your web browser sees.
-      MAIN_URL: "https://postiz.milind.lol"
-      FRONTEND_URL: "https://postiz.milind.lol"
-      NEXT_PUBLIC_BACKEND_URL: "https://milind.lol/api"
-      JWT_SECRET: "klcsdfllkjljlscdscsdcs"
+      MAIN_URL: $MAIN_URL
+      FRONTEND_URL: $FRONTEND_URL
+      NEXT_PUBLIC_BACKEND_URL: $NEXT_PUBLIC_BACKEND_URL
+      JWT_SECRET: $JWT_SECRET
  
       # These defaults are probably fine, but if you change your user/password, update it in the
       # postiz-postgres or postiz-redis services below.
-      DATABASE_URL: "postgresql://postiz-user:postiz-password@postiz-postgres:5432/postiz-db-local"
-      REDIS_URL: "redis://postiz-redis:6379"
+      DATABASE_URL: $DATABASE_URL
+      REDIS_URL: $REDIS_URL
       BACKEND_INTERNAL_URL: "http://localhost:3000"
       IS_GENERAL: "true" # Required for self-hosting.
-      # The container images are pre-configured to use /uploads for file storage.
-      # You probably should not change this unless you have a really good reason!
       STORAGE_PROVIDER: "local"
       UPLOAD_DIRECTORY: "/uploads"
       NEXT_PUBLIC_UPLOAD_DIRECTORY: "/uploads"
@@ -28,29 +25,11 @@ services:
       - 5000:5000
     networks:
       - postiz-network
+      - db
     depends_on:
-      postiz-postgres:
-        condition: service_healthy
       postiz-redis:
         condition: service_healthy
  
-  postiz-postgres:
-    image: postgres:16-alpine
-    container_name: postiz-postgres
-    restart: always
-    environment:
-      POSTGRES_PASSWORD: postiz-password
-      POSTGRES_USER: postiz-user
-      POSTGRES_DB: postiz-db-local
-    volumes:
-      - ./postgres-volume:/var/lib/postgresql/data
-    networks:
-      - postiz-network
-    healthcheck:
-      test: pg_isready -U postiz-user -d postiz-db-local
-      interval: 10s
-      timeout: 3s
-      retries: 3
   postiz-redis:
     image: redis:7.2
     container_name: postiz-redis
